added pattern comman - first step only