@@ -1,7 +1,9 @@
 package tiger.bankapp.repository;
 
 import org.springframework.stereotype.Repository;
+import org.springframework.beans.factory.annotation.Autowired;
 import tiger.bankapp.model.Operation;
+import tiger.bankapp.factory.OperationFactory;
 
 import java.time.LocalDateTime;
 import java.util.*;
@@ -13,12 +15,25 @@ public class OperationRepository {
     private final Map<Integer, Operation> storage = new HashMap<>();
     private final AtomicInteger nextId = new AtomicInteger(1);
 
+    // Фабрика здесь больше не нужна, так как объекты приходят готовыми из Service или Importer
+
+    /**
+     * Универсальный метод сохранения.
+     * Если ID нет - создает новый. Если есть - обновляет.
+     */
     public Operation save(Operation operation) {
         if (operation.getId() == null) {
             operation.setId(nextId.getAndIncrement());
+        } else {
+            // Если ID пришел извне (например, при импорте), подтягиваем счетчик
+            updateNextId(operation.getId());
         }
         storage.put(operation.getId(), operation);
         return operation;
+    }
+
+    private void updateNextId(int currentId) {
+        nextId.getAndUpdate(prev -> Math.max(prev, currentId + 1));
     }
 
     public Optional<Operation> findById(Integer id) {
@@ -35,24 +50,22 @@ public class OperationRepository {
                 .toList();
     }
 
-    public List<Operation> findByCategoryId(Integer categoryId) {
-        return storage.values().stream()
-                .filter(op -> categoryId.equals(op.getCategoryId()))
-                .toList();
-    }
-
     public boolean deleteById(Integer id) {
         return storage.remove(id) != null;
     }
 
-    public void update(Operation operation) {
-        storage.put(operation.getId(), operation);
+    public void saveAll(List<Operation> operations) {
+        operations.forEach(this::save);
     }
 
     public List<Operation> findByDateRange(LocalDateTime from, LocalDateTime to) {
         return storage.values().stream()
                 .filter(op -> !op.getDate().isBefore(from) && !op.getDate().isAfter(to))
-                .collect(Collectors.toList());
+                .toList();
     }
 
+    public void clear() {
+        storage.clear();
+        nextId.set(1);
+    }
 }
